--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "layout.html" %}
 
+{% block navigation %}
+    {% include "navigation.html" %}
+{% endblock %}
+
 {% block title %}
     Hello, World!
 {% endblock %}
