--- a/templates/login.html
+++ b/templates/login.html
@@ -7,8 +7,14 @@
 {% block main %}
 <div class="bg-purple-800 text-purple-800 grid grid-cols-1 h-screen items-center">
     <div class="card container mx-auto w-4/5 md:w-1/3">
-        <h2 class="font-bold text-2xl mb-6">Login</h2>
-        <form action="/login" method="post" class="w-full space-y-2">
+        <div class="grid justify-items-center mb-8">
+            <h2 class="font-bold text-4xl mb-6">Login</h2>
+            <svg xmlns="http://www.w3.org/2000/svg"
+                class="h-24 w-24" viewBox="0 0 20 20" fill="currentColor">
+              <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd" />
+            </svg>
+        </div>
+        <form action="/register" method="post" class="w-full space-y-2">
             <input type="text" autocomplete="off" name="username"
                                                   placeholder="username"
                                                   class="input-text">
@@ -17,13 +23,13 @@
                                                       class="input-text">
             <div class="flex justify-between items-center text-purple-700
                         text-sm">
-                <div class="grid grid-rows-2 grid-cols-1 content-center">
+                <div class="grid grid-rows-2 grid-cols-1 content-center mt-4">
                     <span class="">Don't own an account?</span>
                     <span class="font-semibold font-italic">
                         <a href="/register">Register!</a>
                     </span>
                 </div>
-                <button type="submit" class="submit-btn">
+                <button type="submit" class="submit-btn mt-4">
                     Login
                 </button>
             </div>
