--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,13 @@
 {% block main %}
 <div class="bg-purple-800 text-purple-800 grid grid-cols-1 h-screen items-center">
     <div class="card container mx-auto w-4/5 md:w-1/3">
-        <h2 class="font-bold text-2xl mb-6">Register</h2>
+        <div class="grid justify-items-center mb-8">
+            <h2 class="font-bold text-4xl mb-6">Register</h2>
+            <svg xmlns="http://www.w3.org/2000/svg"
+                class="h-24 w-24" fill="currentColor" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z" />
+            </svg>
+        </div>
         <form action="/register" method="post" class="w-full space-y-2">
             <input type="text" autocomplete="off" name="username"
                                                   placeholder="username"
@@ -20,13 +26,13 @@
                                                       class="input-text">
             <div class="flex justify-between items-center text-purple-700
                         text-sm">
-                <div class="grid grid-rows-2 grid-cols-1 content-center">
+                <div class="grid grid-rows-2 grid-cols-1 content-center mt-4">
                     <span class="">Already own an account?</span>
                     <span class="font-semibold font-italic">
                         <a href="/login">Login!</a>
                     </span>
                 </div>
-                <button type="submit" class="submit-btn">
+                <button type="submit" class="submit-btn mt-4">
                     Register
                 </button>
             </div>
