fix(v:style): remove bg-color information from card class

--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
 
 {% block main %}
 <div class="bg-purple-800 text-purple-800 grid grid-cols-1 h-screen items-center">
-    <div class="card container mx-auto w-4/5 md:w-1/3">
+    <div class="card bg-purple-300 container mx-auto w-4/5 md:w-1/3">
         <div class="grid justify-items-center mb-8">
             <h2 class="font-bold text-4xl mb-6">Login</h2>
             <svg xmlns="http://www.w3.org/2000/svg"
