fix(v:login): replace '/register' -> '/login'
The POST form was sending the data to the wrong route.

--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
               <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd" />
             </svg>
         </div>
-        <form action="/register" method="post" class="w-full space-y-2">
+        <form action="/login" method="post" class="w-full space-y-2">
             <input type="text" autocomplete="off" name="username"
                                                   placeholder="username"
                                                   class="input-text">
