--- a/templates/login.html
+++ b/templates/login.html
@@ -15,10 +15,10 @@
             </svg>
         </div>
         <form action="/login" method="post" class="w-full space-y-2">
-            <input type="text" autocomplete="off" name="username"
+            <input type="text" autocomplete="off" required name="username"
                                                   placeholder="username"
                                                   class="input-text">
-            <input type="password" autocomplete="off" name="password"
+            <input type="password" autocomplete="off" required name="password"
                                                       placeholder="password"
                                                       class="input-text">
             <div class="flex justify-between items-center text-purple-700
