feat(v:purchases): split table based in purchase status
Splitting the main _purchases_ table into individual tables based on
their current status makes more structural sense.

--- a/static/style.css
+++ b/static/style.css
@@ -501,6 +501,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 0.5rem;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
 .mt-12 {
   margin-top: 3rem;
 }
