--- a/templates/purchases.html
+++ b/templates/purchases.html
@@ -15,31 +15,33 @@
                 <h2 class="font-bold text-lg">Registry Of Purchases</h2>
                 <button class="submit-btn"><a href="/purchase">New Purchase</a></button>
             </div>
-            <table class="w-full mt-4">
-                <thead class="bg-purple-800 text-purple-100">
-                    <tr class="">
-                        <!-- TODO: add jinja2 syntax to add header in headers. -->
-                        <th class="border border-purple-700 p-2">Status</th>
-                        <th class="border border-purple-700 p-2">Seller</th>
-                        <th class="border border-purple-700 p-2">Debt</th>
-                        <th class="border border-purple-700 p-2">#P</th>
-                        <th class="border border-purple-700 p-2">Price</th>
-                        <th class="border border-purple-700 p-2">Date</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <!-- TODO: add jinja2 syntax to add data in dictionary
-                            sorted by date. -->
-                        <td class="border border-purple-700 bg-white p-2">1</td>
-                        <td class="border border-purple-700 bg-white p-2">2</td>
-                        <td class="border border-purple-700 bg-white p-2">3</td>
-                        <td class="border border-purple-700 bg-white p-2">4</td>
-                        <td class="border border-purple-700 bg-white p-2">5</td>
-                        <td class="border border-purple-700 bg-white p-2">6</td>
-                    </tr>
-                </tbody>
-            </table>
+            {% for status in purchases_data %}
+            <div class="my-8">
+                <h4 class="font-bold text-md">{{ status }} Purchases</h4>
+                <table class="w-full mt-4">
+                    <thead class="bg-purple-800 text-purple-100">
+                        <tr class="">
+                            {% for header in headers %}
+                            <th class="border border-purple-700 p-2">
+                                {{ header | title }}
+                            </th>
+                            {% endfor %}
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for purchase in purchases_data[status] %}
+                        <tr>
+                            {% for header in headers %}
+                            <td class="border border-purple-700 bg-white p-2">
+                                {{ purchase[header] | formatter }}
+                            </td>
+                            {% endfor %}
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
