fix(c:purchases): order purchases by date (descending)

--- a/templates/purchases.html
+++ b/templates/purchases.html
@@ -17,7 +17,7 @@
             </div>
             {% for status in purchases_data %}
             <div class="my-8">
-                <h4 class="font-bold text-md">{{ status }} Purchases</h4>
+                <h4 class="font-bold text-md">{{ status }} Purchases (↓Date)</h4>
                 <table class="w-full mt-4">
                     <thead class="bg-purple-800 text-purple-100">
                         <tr class="">
