fix(v): add missing padding on button elements

--- a/templates/payments.html
+++ b/templates/payments.html
@@ -13,7 +13,7 @@
         <div class="">
             <div class="flex justify-between">
                 <h2 class="font-bold text-lg">Registry Of Payments (↓Date)</h2>
-                <button class="submit-btn"><a href="/payment">New Payment</a></button>
+                <a href="/payment"><button class="submit-btn">New Payment</button></a>
             </div>
             <table class="table mt-4">
                 <thead class="">
