--- a/templates/purchases.html
+++ b/templates/purchases.html
@@ -13,7 +13,7 @@
         <div class="">
             <div class="flex justify-between">
                 <h2 class="font-bold text-lg">Registry Of Purchases</h2>
-                <button class="submit-btn"><a href="/purchase">New Purchase</a></button>
+                <a href="/purchase"><button class="submit-btn">New Purchase</button></a>
             </div>
             {% for status in purchases_data %}
             <div class="my-8">
