--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -8,11 +8,11 @@
             </svg>
         </button>
         {% if session.username %}
-        <a href="/" class="block p-2 font-bold text-2md">
+        <a href="/" class="block py-2 px-4 font-bold text-lg">
             {{ session.username }}
         </a>
         {% else %}
-        <a href="/login" class="block p-2 font-bold text-2md">
+        <a href="/login" class="block py-2 px-4 font-bold text-lg">
             Login
         </a>
         {% endif %}
