--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -50,10 +50,22 @@
                     Purchases
                 </li>
             </a>
+            <a href="/purchase">
+                <li class="py-1 my-2 hover:bg-purple-600 transition
+                                          duration-200 px-8 text-sm">
+                    Add Purchase
+                </li>
+            </a>
             <a href="/payments">
                 <li class="py-1 my-2 hover:bg-purple-600 transition
                                           duration-200 px-4">
                     Payments
+                </li>
+            </a>
+            <a href="/payment">
+                <li class="py-1 my-2 hover:bg-purple-600 transition
+                                          duration-200 px-8 text-sm">
+                    Add Payment
                 </li>
             </a>
         </ul>
