feat(v): automatically focus input fields when available

--- a/templates/purchase.html
+++ b/templates/purchase.html
@@ -27,6 +27,7 @@
                     <input type="text" name="seller" autocomplete="off"
                                                      required
                                                      placeholder="Seller"
+                                                     autofocus
                                                      class="input-text md:flex-1
                                                      md:basis-3/12">
                     <input type="text" name="item" autocomplete="off"
@@ -49,6 +50,7 @@
                     <textarea name="description" autocomplete="off"
                                                  rows="2" cols="80"
                                                  placeholder="Description"
+                                                 maxlength="120"
                                                  class="input-text
                                                  md:space-y-4"></textarea>
                 </div>
