--- a/templates/login.html
+++ b/templates/login.html
@@ -17,6 +17,7 @@
         <form action="/login" method="post" class="w-full space-y-2">
             <input type="text" autocomplete="off" required name="username"
                                                   placeholder="username"
+                                                  autofocus
                                                   class="input-text">
             <input type="password" autocomplete="off" required name="password"
                                                       placeholder="password"
